fix width overflow of schedule container

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -69,7 +69,6 @@
     }
     .schedule-container {
         position: absolute;
-        width: 100%;
         margin: $dayHeight 0 0px $hourWidth;
     }
     .bar-text {
